# Applio

./: .pdm-python  README.md  pyproject.toml  run-applio.bat  run-applio.ps1  run-applio.sh  run-desktop.ps1  run-install.bat  run-install.ps1  run-install.sh
applio.egg-info/: PKG-INFO
assets/: config.json
assets/themes/qt/: dark.qss
desktop_ui/: STATUS.md  main.py  main_window.py
desktop_ui/locales/: applio_en_US.ts  applio_zh_CN.qm  applio_zh_CN.ts
desktop_ui/tabs/: download_tab.py  extra_tab.py  inference_tab.py  plugins_tab.py  settings_tab.py  train_tab.py  tts_tab.py  voice_blender_tab.py
desktop_ui/widgets/: audio_player.py
rvc/infer/: infer.py
rvc/train/: train.py
rvc/train/extract/: extract.py
rvc/train/preprocess/: preprocess.py
