[project]
name = "applio"
version = "0.1.0" # Placeholder version
description = "A simple, high-quality voice conversion tool, focused on ease of use and performance."
requires-python = ">=3.10"
dependencies = [
  # Core dependencies
  "pip>=23.3; sys_platform == 'darwin'",
  "wheel; sys_platform == 'darwin'",
  "PyYAML", # Assuming needed on all platforms
  "numpy==1.23.5",
  "requests>=2.31.0,<2.32.0",
  "tqdm",
  "wget",
  # Audio processing
  "ffmpeg-python>=0.2.0",
  "faiss-cpu==1.7.3", # Base CPU version
  "librosa==0.9.2",
  "scipy==1.11.1",
  "soundfile==0.12.1",
  "noisereduce",
  "pedalboard",
  "stftpitchshift",
  "soxr",
  # Machine learning and deep learning (excluding torch*)
  "omegaconf>=2.0.6; sys_platform == 'darwin'",
  "numba; sys_platform == 'linux'",
  "numba==0.57.0; sys_platform == 'darwin' or sys_platform == 'win32'",
  "torchcrepe==0.0.23",
  "torchfcpe",
  "einops",
  "transformers==4.44.2",
  # Visualization and UI
  "matplotlib==3.7.2",
  "tensorboard",
  "gradio==5.14.0",
  # Miscellaneous utilities
  "certifi>=2023.07.22; sys_platform == 'darwin'",
  "antlr4-python3-runtime==4.8; sys_platform == 'darwin'",
  "tensorboardX",
  "edge-tts==6.1.9",
  "pypresence",
  "beautifulsoup4",
  "pandas>=2.1.0",
  "pyqt6>=6.8.1",
]

# Optional dependencies and UV configurations removed.
# Backend-specific packages will be installed via uv pip install in the script.

[tool.setuptools]
# Explicitly declare packages and modules to include
packages = ["rvc", "tabs"]
py-modules = ["app", "core"]
